--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="media-content.js"></script>
     <script>
       new MediaContainer({
+        // Требуемые медиа запросы:
         medias: [1440, 1280, 1200, 992],
         resizeTimeout: 500,
       });
