--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="example.css" />
   </head>
   <body>
-    <!-- data-media-container="<1439,<1279,<1199,>=992" -->
+
+
+
     <div class="container" data-media-container>
-      <div class="box"></div>
+      <div class="box"><a href="https://github.com/artemijeka/media-content">https://github.com/artemijeka/media-content</a></div>
     </div>
 
-    <script src="media-content.js"></script>
+    <script src="media-container.js"></script>
     <script>
       new MediaContainer({
         // Требуемые медиа запросы:
@@ -21,5 +23,8 @@
         resizeTimeout: 500,
       });
     </script>
+
+
+
   </body>
 </html>
