--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 
     <div class="container" data-media-container>
-      <div class="box"><a href="https://github.com/artemijeka/media-content">https://github.com/artemijeka/media-content</a></div>
+      <div class="box">
+        <h1>Чтобы проверить работу надо делать resize окна по ширине</h1>
+        <a href="https://github.com/artemijeka/media-content">https://github.com/artemijeka/media-content</a></div>
     </div>
 
     <script src="media-container.js"></script>
