--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="container" data-media-container>
       <div class="box">
-        <h1>Чтобы проверить работу надо делать resize окна по ширине</h1>
+        <h4>Чтобы проверить работу надо делать resize окна по ширине, делая остановки</h4>
         <a href="https://github.com/artemijeka/media-content">https://github.com/artemijeka/media-content</a></div>
     </div>
 
