--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container" data-media-container>
       <div class="box">
         <h4>Чтобы проверить работу надо делать resize окна по ширине, делая остановки</h4>
+        <h4>Когда цвет блока меняется это значит сработали медиа условия на чёрный контейнер</h4>
         <a href="https://github.com/artemijeka/media-content">https://github.com/artemijeka/media-content</a></div>
     </div>
 
